--- a/css/pageStyle.css
+++ b/css/pageStyle.css
@@ -1,4 +1,4 @@
-body{margin-left:0; padding:0;}
+body{margin-left:0; padding:5px;}
 
 #mainPage .box{background-color: rgb(38, 85, 236);
     border-radius:8px;
@@ -11,6 +11,8 @@ body{margin-left:0; padding:0;}
     border: 2px solid blue;
     
 }
+body .bigger{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16pt;}
 
 #mainPage .box:hover a{color:blue;}
 #mainPage .box a{
